<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/screen_padding"
        android:paddingRight="@dimen/screen_padding"
        android:paddingTop="@dimen/space_m">

        <LinearLayout
            style="@style/Widget.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Text.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devices_intro_title" />

            <TextView
                style="@style/Text.Body.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:text="@string/devices_intro_body" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_m"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/devices_scan"
                    style="@style/Button.Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_scan" />

                <Button
                    android:id="@+id/devices_add_manual"
                    style="@style/Button.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_s"
                    android:layout_weight="1"
                    android:text="@string/action_add_by_address" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/devices_scan_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/devices_scan_status"
                    style="@style/Text.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_s"
                    android:layout_weight="1"
                    android:text="@string/action_scanning" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/devices_hint"
            style="@style/Widget.Banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:background="@drawable/bg_banner_warning">

            <ImageView
                android:layout_width="@dimen/icon_m"
                android:layout_height="@dimen/icon_m"
                android:contentDescription="@null"
                android:src="@drawable/ic_info" />

            <TextView
                style="@style/Text.Body.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_s"
                android:layout_weight="1"
                android:text="@string/devices_hint_network" />
        </LinearLayout>

        <TextView
            android:id="@+id/devices_found_header"
            style="@style/Text.SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/section_found_now" />

        <TextView
            android:id="@+id/devices_saved_header"
            style="@style/Text.SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/section_saved_devices" />
    </LinearLayout>

    <ListView
        android:id="@+id/devices_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_s"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:divider="@null"
        android:paddingBottom="@dimen/space_xl"
        android:scrollbars="none" />
</LinearLayout>
