<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/screen_padding"
        android:paddingRight="@dimen/screen_padding"
        android:paddingTop="@dimen/space_m">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/space_m"
            android:paddingRight="@dimen/space_s">

            <ImageView
                android:layout_width="@dimen/icon_m"
                android:layout_height="@dimen/icon_m"
                android:contentDescription="@null"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_s"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/library_search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_tertiary" />

            <ImageButton
                android:id="@+id/search_clear"
                style="@style/Widget.IconButton.Bare"
                android:layout_width="@dimen/touch_target"
                android:layout_height="@dimen/touch_target"
                android:contentDescription="@string/cd_clear_search"
                android:src="@drawable/ic_close"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/filter_videos"
                style="@style/Widget.Segment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/Widget.SegmentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_videos" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_photos"
                style="@style/Widget.Segment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_xs"
                android:layout_weight="1">

                <TextView
                    style="@style/Widget.SegmentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_photos" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_music"
                style="@style/Widget.Segment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_xs"
                android:layout_weight="1">

                <TextView
                    style="@style/Widget.SegmentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_music" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/library_summary"
                style="@style/Text.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state_loading" />

            <Button
                android:id="@+id/library_folders"
                style="@style/Button.Ghost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_browse_folders" />

            <Button
                android:id="@+id/library_sort"
                style="@style/Button.Ghost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sort" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/space_s"
        android:background="@color/divider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/library_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:divider="@color/divider"
            android:dividerHeight="@dimen/divider_height"
            android:paddingBottom="@dimen/space_xl"
            android:scrollbars="none" />

        <include
            android:id="@+id/library_state"
            layout="@layout/view_state" />

        <ProgressBar
            android:id="@+id/library_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_height"
            android:layout_gravity="top"
            android:indeterminate="true"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
